# 609_Pig_Game

./: Fiona_pig.ipynb  Graphing_code_pig.py  Piglet.py  README.md  competition.py  cross_section_graph.py  optimal_policy.py  pig_game.py  pig_manual.py  piglet_manual.py  pyproject.toml  reachable.py  report.ipynb  requirements.txt  utilities.py
data/reachable/pig/: goal_100_opponent_score_30.json
data/value_function/pig/: goal_20.json
data/value_function/piglet/: goal_2.json  value_tracker_goal_2.json
